@@ -9,6 +9,9 @@ Revision history for Perl extension Net::SSLeay.
      get_my_thread_id if it happened to be called in a non-threaded build.
      Patch kindly supplied by Craig A. Berry.
      Added README.VMS, contributed by Craig A. Berry.
+     Added SSL_set_tlsext_host_name, SSL_get_servername,
+     SSL_get_servername_type, SSL_CTX_set_tlsext_servername_callback for
+     server side Server Name Indication (SNI) support. Patched by kmx.
 
 1.49 2012-09-25
      Fixed problem where on some platforms test t/local/07_tcpecho.t would
